# kubedump

./: .gitignore  Cargo.toml  Makefile  go.mod  go.sum  main.go
pkg/cli/: cli.go
pkg/k8s/: connect.go  util.go
pkg/manifest_loader/: dump.go  k8s.go
pkg/manifests/: command.go  dump.go  k8s.go
pkg/volumes/: command.go  download.go  downloader.go  volume-discovery.go
src/: k8s_discovery.rs  main.rs
