[package]
name = "kubedump"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
strip = "symbols"
panic = "abort"

[dependencies]
tokio = { version = "1.14.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
kube = { version = "0.82.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
serde = "1.0.163"
serde_yaml = "0.9"
rand = "0.8.5"
